--- a/python/AmpLabs_Example_Basic_Plotting.ipynb
+++ b/python/AmpLabs_Example_Basic_Plotting.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/amplabs-ai/amplabs/blob/main/python/AmpLabs_Example_Basic_Plotting.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "# AmpLabs Example\n"
       ],
@@ -247,8 +257,8 @@
       },
       "outputs": [],
       "source": [
-        "user_token = \"<token>\"\n",
-        "cell_id = 'NMC-E4-2'"
+        "user_token = \"<your-token>\"\n",
+        "cell_id = 'your-cell-id'"
       ]
     },
     {
@@ -902,7 +912,8 @@
     "colab": {
       "collapsed_sections": [],
       "name": "AmpLabs Example - Basic Plotting",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
