Fixed read data from API response.

--- a/python/MRS_2022_Battery_Data_Plotting_Examples/Example_0_Intro_to_APIs_AmpLabs_MRS_TRI.ipynb
+++ b/python/MRS_2022_Battery_Data_Plotting_Examples/Example_0_Intro_to_APIs_AmpLabs_MRS_TRI.ipynb
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {
     "id": "dTr5wTzwWDSf"
    },
@@ -305,8 +305,10 @@
     "    }\n",
     "    try:\n",
     "        response = requests.request(\"GET\", url, headers=headers)\n",
-    "        response = json.loads(response.text)\n",
-    "        return response, 1\n",
+    "        res =  json.loads(response.text)\n",
+    "        response = requests.request(\"GET\",res[\"response_url\"])\n",
+    "        response = gzip.decompress(response.content)\n",
+    "        return json.loads(response.decode()), 1\n",
     "    except requests.exceptions.RequestException as e:\n",
     "        print(e)\n",
     "    return None,0\n",
@@ -319,8 +321,10 @@
     "    }\n",
     "    try:\n",
     "        response = requests.request(\"GET\", url, headers=headers)\n",
-    "        response = json.loads(response.text)\n",
-    "        return response, 1\n",
+    "        res =  json.loads(response.text)\n",
+    "        response = requests.request(\"GET\",res[\"response_url\"])\n",
+    "        response = gzip.decompress(response.content)\n",
+    "        return json.loads(response.decode()), 1\n",
     "    except requests.exceptions.RequestException as e:\n",
     "        print(e)\n",
     "    return None,0\n",
@@ -356,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {
     "id": "9dUDQPga264o"
    },
@@ -368,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -414,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {
     "id": "sOc0VKirpTOk"
    },
@@ -426,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -845,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {
     "id": "QSNxCufEEnkt"
    },
@@ -947,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
