--- a/python/MRS_2022_Battery_Data_Plotting_Examples/Example_1_Simple_Manipulations_AmpLabs_MRS_Sandia.ipynb
+++ b/python/MRS_2022_Battery_Data_Plotting_Examples/Example_1_Simple_Manipulations_AmpLabs_MRS_Sandia.ipynb
@@ -103,6 +103,7 @@
     "\n",
     "import json\n",
     "import requests\n",
+    "import gzip\n",
     "\n",
     "# PyData Libraries\n",
     "\n",
@@ -247,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "id": "7PIcUoWCBk2i"
    },
@@ -260,8 +261,10 @@
     "    }\n",
     "    try:\n",
     "        response = requests.request(\"GET\", url, headers=headers)\n",
-    "        response = json.loads(response.text)\n",
-    "        return response, 1\n",
+    "        res =  json.loads(response.text)\n",
+    "        response = requests.request(\"GET\",res[\"response_url\"])\n",
+    "        response = gzip.decompress(response.content)\n",
+    "        return json.loads(response.decode()), 1\n",
     "    except requests.exceptions.RequestException as e:\n",
     "        print(e)\n",
     "    return None,0"
@@ -294,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "id": "yC6x2oHo8deD"
    },
