--- a/python/MRS_2022_Battery_Data_Plotting_Examples/Example_2_Compare_with_Simulation_Data_AmpLabs_MRS_Sandia.ipynb
+++ b/python/MRS_2022_Battery_Data_Plotting_Examples/Example_2_Compare_with_Simulation_Data_AmpLabs_MRS_Sandia.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "id": "7lLSgWgegbx_"
    },
@@ -166,6 +166,7 @@
     "# Useful for fetching data from the web \n",
     "import json\n",
     "import requests\n",
+    "import gzip\n",
     "\n",
     "# PyData Libraries\n",
     "import pandas as pd"
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "id": "7a617755"
    },
@@ -196,7 +197,10 @@
     "    }\n",
     "    try:\n",
     "        response = requests.request(\"GET\", url, headers=headers)\n",
-    "        return json.loads(response.text)\n",
+    "        res =  json.loads(response.text)\n",
+    "        response = requests.request(\"GET\",res[\"response_url\"])\n",
+    "        response = gzip.decompress(response.content)\n",
+    "        return json.loads(response.decode())\n",
     "    except requests.exceptions.RequestException as e:\n",
     "        print(e)\n",
     "    return None"
@@ -204,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -252,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1926,7 +1930,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.8.2 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1940,7 +1944,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.6.5"
   },
   "toc": {
    "base_numbering": 1,
