AL-140: webflow changes

--- a/python/MRS_2022_Battery_Data_Plotting_Examples/Example_0_Intro_to_APIs_AmpLabs_MRS_TRI.ipynb
+++ b/python/MRS_2022_Battery_Data_Plotting_Examples/Example_0_Intro_to_APIs_AmpLabs_MRS_TRI.ipynb
@@ -240,7 +240,7 @@
     "    with open(f\"{filename}.csv\", 'rb') as src, gzip.open(filename + '.gz', 'wb') as dst:\n",
     "        dst.writelines(src)\n",
     "\n",
-    "    url = 'https://www.amplabs.ai/upload/cells/generic'\n",
+    "    url = 'https://www.app.amplabs.ai/upload/cells/generic'\n",
     "    data = {\"cell_id\": cell_id}\n",
     "    file = {'file': open(filename + '.gz', 'rb')}\n",
     "    headers = {\n",
@@ -263,7 +263,7 @@
     "\n",
     "# Function used to notify AmpLbas to prepare for an upload \n",
     "def init_upload_to_amplabs(user_token, cell_id):\n",
-    "    url = 'https://www.amplabs.ai/upload/cells/initialize'\n",
+    "    url = 'https://www.app.amplabs.ai/upload/cells/initialize'\n",
     "    data = [{'test_type': 'cycle',\n",
     "            'cell_id': cell_id,\n",
     "             'is_public': True\n",
@@ -299,7 +299,7 @@
    "source": [
     "# Function used to fetch cycle data from AmpLabs\n",
     "def get_amplabs_cycledata(user_token, cell_id):\n",
-    "    url = 'https://www.amplabs.ai/download/cells/cycle_data_json?cell_id={}'.format(cell_id)\n",
+    "    url = 'https://www.app.amplabs.ai/download/cells/cycle_data_json?cell_id={}'.format(cell_id)\n",
     "    headers = {\n",
     "    \"Authorization\": \"Bearer {}\".format(user_token),\n",
     "    }\n",
@@ -315,7 +315,7 @@
     "\n",
     "# Function used to fetch timeseries data from AmpLabs\n",
     "def get_amplabs_timeseriesdata(user_token, cell_id):\n",
-    "    url = 'https://www.amplabs.ai/download/cells/cycle_timeseries_json?cell_id={}'.format(cell_id)\n",
+    "    url = 'https://www.app.amplabs.ai/download/cells/cycle_timeseries_json?cell_id={}'.format(cell_id)\n",
     "    headers = {\n",
     "    \"Authorization\": \"Bearer {}\".format(user_token),\n",
     "    }\n",
@@ -331,7 +331,7 @@
     "\n",
     "# Function used to fetch timeseries data from AmpLabs\n",
     "def get_amplabs_meta(user_token, cell_id):\n",
-    "    url = 'https://www.amplabs.ai/cells/cycle/metaWithId?cell_id={}'.format(cell_id)\n",
+    "    url = 'https://www.app.amplabs.ai/cells/cycle/metaWithId?cell_id={}'.format(cell_id)\n",
     "    headers = {\n",
     "    \"Authorization\": \"Bearer {}\".format(user_token),\n",
     "    }\n",
