--- a/python/Basic_Battery_Data_Plotting_Examples/Example_1_AmpLabs_Basic_Plotting.ipynb
+++ b/python/Basic_Battery_Data_Plotting_Examples/Example_1_AmpLabs_Basic_Plotting.ipynb
@@ -201,7 +201,7 @@
    "source": [
     "# Function used to fetch cycle data from AmpLabs\n",
     "def get_amplabs_cycledata(user_token, cell_id):\n",
-    "    url = \"http://www.amplabs.ai/download/cells/cycle_data_json?cell_id={}\".format(cell_id.replace('/','%2F'))\n",
+    "    url = \"http://www.app.amplabs.ai/download/cells/cycle_data_json?cell_id={}\".format(cell_id.replace('/','%2F'))\n",
     "    httprequest = urllib.request.Request( url, method=\"GET\")\n",
     "    httprequest.add_header(\"Authorization\", \"Bearer {}\".format(user_token))\n",
     "    try:\n",
@@ -216,7 +216,7 @@
     "\n",
     "# Function used to fetch timeseries data from AmpLabs\n",
     "def get_amplabs_timeseriesdata(user_token, cell_id):\n",
-    "    url = \"http://www.amplabs.ai/download/cells/cycle_timeseries_json?cell_id={}\".format(cell_id.replace('/','%2F'))\n",
+    "    url = \"http://www.app.amplabs.ai/download/cells/cycle_timeseries_json?cell_id={}\".format(cell_id.replace('/','%2F'))\n",
     "    httprequest = urllib.request.Request(\n",
     "            url, method=\"GET\"\n",
     "        )\n",
@@ -235,7 +235,7 @@
     "\n",
     "# Function used to fetch test meta data from AmpLabs\n",
     "def get_amplabs_meta(user_token, cell_id):\n",
-    "    url = 'https://www.amplabs.ai/cells/tests/cycle/metaWithId?cell_id={}'.format(cell_id.replace('/','%2F'))\n",
+    "    url = 'https://www.app.amplabs.ai/cells/tests/cycle/metaWithId?cell_id={}'.format(cell_id.replace('/','%2F'))\n",
     "    print(url)\n",
     "    httprequest = urllib.request.Request( url, method=\"GET\")\n",
     "    httprequest.add_header(\"Authorization\", \"Bearer {}\".format(user_token))\n",
@@ -872,7 +872,7 @@
     "import pandas as pd\n",
     "\n",
     "def get_amplabs_data(params):\n",
-    "    url = \"https://www.amplabs.ai/download/cells/cycle_data_json?{}\".format(params)\n",
+    "    url = \"https://www.app.amplabs.ai/download/cells/cycle_data_json?{}\".format(params)\n",
     "    httprequest = urllib.request.Request(\n",
     "            url, method=\"GET\"\n",
     "        )\n",
