--- a/python/Basic_Battery_Data_Plotting_Examples/Example_2_AmpLabs_Basic_Plotting.ipynb
+++ b/python/Basic_Battery_Data_Plotting_Examples/Example_2_AmpLabs_Basic_Plotting.ipynb
@@ -229,7 +229,7 @@
    "source": [
     "# Function used to fetch cycle data from AmpLabs\n",
     "def get_amplabs_cycledata(user_token, cell_id):\n",
-    "    url = \"https://www.amplabs.ai/download/cells/cycle_data_json?cell_id={}\".format(cell_id.replace('/','%2F'))\n",
+    "    url = \"https://www.app.amplabs.ai/download/cells/cycle_data_json?cell_id={}\".format(cell_id.replace('/','%2F'))\n",
     "    headers = {\n",
     "    \"Authorization\": \"Bearer {}\".format(user_token),\n",
     "    }\n",
@@ -246,7 +246,7 @@
     "\n",
     "# Function used to fetch timeseries data from AmpLabs\n",
     "def get_amplabs_timeseriesdata(user_token, cell_id):\n",
-    "    url = \"https://www.amplabs.ai/download/cells/cycle_timeseries_json?cell_id={}\".format(cell_id.replace('/','%2F'))\n",
+    "    url = \"https://www.app.amplabs.ai/download/cells/cycle_timeseries_json?cell_id={}\".format(cell_id.replace('/','%2F'))\n",
     "    headers = {\n",
     "    \"Authorization\": \"Bearer {}\".format(user_token),\n",
     "    }\n",
@@ -263,7 +263,7 @@
     "\n",
     "# Function used to fetch test meta data from AmpLabs\n",
     "def get_amplabs_meta(user_token, cell_id):\n",
-    "    url = 'https://www.amplabs.ai/cells/tests/cycle/metaWithId?cell_id={}'.format(cell_id.replace('/','%2F'))\n",
+    "    url = 'https://www.app.amplabs.ai/cells/tests/cycle/metaWithId?cell_id={}'.format(cell_id.replace('/','%2F'))\n",
     "    headers = {\n",
     "    \"Authorization\": \"Bearer {}\".format(user_token),\n",
     "    }\n",
