--- a/python/MRS_2022_Battery_Data_Plotting_Examples/Example_1_Simple_Manipulations_AmpLabs_MRS_Sandia.ipynb
+++ b/python/MRS_2022_Battery_Data_Plotting_Examples/Example_1_Simple_Manipulations_AmpLabs_MRS_Sandia.ipynb
@@ -121,12 +121,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "rX6ZdFHGR8jr"
    },
    "source": [
-    "After uploading data to https://www.amplabs.ai we will build functions that will help us fetch, manipulate and plot our data"
+    "After uploading data to https://www.app.amplabs.ai we will build functions that will help us fetch, manipulate and plot our data"
    ]
   },
   {
@@ -255,7 +256,7 @@
    "outputs": [],
    "source": [
     "def get_amplabs_cycledata(user_token, cell_id):\n",
-    "    url = \"https://www.amplabs.ai/download/cells/cycle_data_json?cell_id={}\".format(cell_id.replace('/','%2F'))\n",
+    "    url = \"https://www.app.amplabs.ai/download/cells/cycle_data_json?cell_id={}\".format(cell_id.replace('/','%2F'))\n",
     "    headers = {\n",
     "    \"Authorization\": \"Bearer {}\".format(user_token),\n",
     "    }\n",
