--- a/python/MRS_2022_Battery_Data_Plotting_Examples/Example_3_Compare_with_Synthetic_Data_AmpLabs_MRS_Sandia.ipynb
+++ b/python/MRS_2022_Battery_Data_Plotting_Examples/Example_3_Compare_with_Synthetic_Data_AmpLabs_MRS_Sandia.ipynb
@@ -153,7 +153,7 @@
    "outputs": [],
    "source": [
     "def get_amplabs_data(cell_id):\n",
-    "    url = \"https://www.amplabs.ai/download/cells/cycle_data_json?cell_id={}\".format(cell_id.replace('/', '%2F'))\n",
+    "    url = \"https://www.app.amplabs.ai/download/cells/cycle_data_json?cell_id={}\".format(cell_id.replace('/', '%2F'))\n",
     "    user_token = \"<token>\"\n",
     "    headers = {\n",
     "    'Authorization': 'Bearer {}'.format(user_token),\n",
